feature/sidetext add more description

--- a/txt/Preface.tex
+++ b/txt/Preface.tex
@@ -113,9 +113,14 @@ however, perhaps the main lines would remain quite unchanged.
 \end{itemize}
 
 A diagram showing interdependence (in terms of logic and ideas)
-is drawn below.
-The overall diagram is messy,
+is drawn in \cref{fig:overallmap}.
+The diagram itself may look messy,
 but clearly indicates subjects of great importance.
+For example, measure theory and calculus are no more or less than
+one of the main paths which modern mathematics have emerged;
+although there are some requirements for the theory,
+the results are of absolute importance.
+The same comment also holds for manifolds.
 \begin{figure}[h!]
     \centering
     \begin{tikzpicture}
@@ -166,4 +171,6 @@ but clearly indicates subjects of great importance.
         \draw[->] (tvs.south) -- (deq.north);
         \draw[->] (rnd.south) -- (deq.north west);
     \end{tikzpicture}
+    \caption{An overall map of topics in these study notes}
+    \label{fig:overallmap}
 \end{figure}
