feature/settings add descrption

--- a/settings.tex
+++ b/settings.tex
@@ -21,5 +21,6 @@
     \pagenumbering{arabic}
 }
 
+% Reference figures, etc by capital letters at all cases
 \crefname{figure}{Figure}{Figures}
 \crefname{table}{Table}{Tables}
