feature/bsc tidy main document

--- a/MathNotes.tex
+++ b/MathNotes.tex
@@ -39,67 +39,14 @@
     \frontmatter
     \pagestyle{front}
     \import{txt}{Preface}
-    % \pagestyle{front}
-    % \setchapter*{Test Preface} \label{chap:preface}
-    % % 국방상 또는 국민경제상 긴절한 필요로 인하여 법률이 정하는 경우를 제외하고는, 사영기업을 국유 또는 공유로 이전하거나 그 경영을 통제 또는 관리할 수 없다. 이 헌법에 의한 최초의 대통령의 임기는 이 헌법시행일로부터 개시한다. 교육의 자주성·전문성·정치적 중립성 및 대학의 자율성은 법률이 정하는 바에 의하여 보장된다. 국가안전보장에 관련되는 대외정책·군사정책과 국내정책의 수립에 관하여 국무회의의 심의에 앞서 대통령의 자문에 응하기 위하여 국가안전보장회의를 둔다. 국회는 선전포고, 국군의 외국에의 파견 또는 외국군대의 대한민국 영역안에서의 주류에 대한 동의권을 가진다.
 
-    % % 모든 국민은 사생활의 비밀과 자유를 침해받지 아니한다. 국무총리는 국회의 동의를 얻어 대통령이 임명한다. 재판의 전심절차로서 행정심판을 할 수 있다. 행정심판의 절차는 법률로 정하되, 사법절차가 준용되어야 한다. 군인 또는 군무원이 아닌 국민은 대한민국의 영역안에서는 중대한 군사상 기밀·초병·초소·유독음식물공급·포로·군용물에 관한 죄중 법률이 정한 경우와 비상계엄이 선포된 경우를 제외하고는 군사법원의 재판을 받지 아니한다. 헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 계엄을 선포한 때에는 대통령은 지체없이 국회에 통고하여야 한다. 국정감사 및 조사에 관한 절차 기타 필요한 사항은 법률로 정한다.
+    \maketocpage
 
-    % % 모든 국민은 법률이 정하는 바에 의하여 국가기관에 문서로 청원할 권리를 가진다. 헌법개정안이 제2항의 찬성을 얻은 때에는 헌법개정은 확정되며, 대통령은 즉시 이를 공포하여야 한다. 국가는 균형있는 국민경제의 성장 및 안정과 적정한 소득의 분배를 유지하고, 시장의 지배와 경제력의 남용을 방지하며, 경제주체간의 조화를 통한 경제의 민주화를 위하여 경제에 관한 규제와 조정을 할 수 있다. 국회의원의 선거구와 비례대표제 기타 선거에 관한 사항은 법률로 정한다. 대한민국의 경제질서는 개인과 기업의 경제상의 자유와 창의를 존중함을 기본으로 한다. 민주평화통일자문회의의 조직·직무범위 기타 필요한 사항은 법률로 정한다.
+    \mainmatter
+    \pagestyle{main}
 
-    % % 국가는 청원에 대하여 심사할 의무를 진다. 국가의 세입·세출의 결산, 국가 및 법률이 정한 단체의 회계검사와 행정기관 및 공무원의 직무에 관한 감찰을 하기 위하여 대통령 소속하에 감사원을 둔다. 헌법재판소에서 법률의 위헌결정, 탄핵의 결정, 정당해산의 결정 또는 헌법소원에 관한 인용결정을 할 때에는 재판관 6인 이상의 찬성이 있어야 한다. 전직대통령의 신분과 예우에 관하여는 법률로 정한다. 국회의원은 국가이익을 우선하여 양심에 따라 직무를 행한다. 모든 국민은 인간다운 생활을 할 권리를 가진다. 새로운 회계연도가 개시될 때까지 예산안이 의결되지 못한 때에는 정부는 국회에서 예산안이 의결될 때까지 다음의 목적을 위한 경비는 전년도 예산에 준하여 집행할 수 있다.
-
-    % 국회의원은 현행범인인 경우를 제외하고는 회기중 국회의 동의없이 체포 또는 구금되지 아니한다. 비상계엄하의 군사재판은 군인·군무원의 범죄나 군사에 관한 간첩죄의 경우와 초병·초소·유독음식물공급·포로에 관한 죄중 법률이 정한 경우에 한하여 단심으로 할 수 있다. 다만, 사형을 선고한 경우에는 그러하지 아니하다. 모든 국민은 법률이 정하는 바에 의하여 선거권을 가진다. 국회의 회의는 공개한다. 다만, 출석의원 과반수의 찬성이 있거나 의장이 국가의 안전보장을 위하여 필요하다고 인정할 때에는 공개하지 아니할 수 있다. 신체장애자 및 질병·노령 기타의 사유로 생활능력이 없는 국민은 법률이 정하는 바에 의하여 국가의 보호를 받는다.
-
-    % \lipsum[2-6]
-
-    % \maketocpage
-
-    % \mainmatter
-
-    % \pagestyle{main}
-
-    % \setpart{Test Part 1}
-
-    % \lipsum[3]
-
-    % \setcounter{chapter}{8}
     
-    % \setchapter{Test Chapter 1} \label{chap:TC1}
-    % % Let \denote{$\vec{v}\dotproduct\vec{w}$}[$\dotproduct$] denote the \textdef[inner product]{inner product of $\vec{v}$ and $\vec{w}$}.
-    
-    % \section{Test Section 1} \label{sec:9TS1}
-    % \lipsum[1-5]
-    
-    % \setcounter{section}{9}
-    
-    % \section{Test Section 2}
-    % % We continue the text of Section \ref{sec:9TS1} from Chapter \nameref{chap:preface}.
-    
-    % \lipsum[6-9]
-    
-    % \setchapter{Test Chapter 2}
-    % \lipsum[1-2]
-    
-    % \section{Test Section 1}
-    
-    % \setcounter{section}{9}
-    
-    % \section{Test Section 2}
-
-    % \setcounter{part}{4}
-    % \setpart{Test Part 5}
-
-    % \appendix
-    % \setchapter{Appendix}
-    % \section{Appendix}
-
-    % \backmatter
-
-    % \setchapter{Appendix}
-
-    % \lipsum[2-3]
-    % % \printindex
-    % % \printnomenclature
+    \printindex
+    \printnomenclature
     
 \end{document}
