feature/bsc add part description

--- a/txt/BasicAlgebra.tex
+++ b/txt/BasicAlgebra.tex
@@ -1,2 +1,11 @@
 \setpart{Basic Algebra}
 \label{part:basicalgebra}
+
+This part is devoted to the study of basic tools
+that are most frequently used in all mathematics.
+We first define what it means to be an ``algebraic structure,''
+and explore some examples.
+Groups arise as first new structures,
+but it is vector spaces that the human intuition is most accustomed to.
+Hence, after studying polynomials (being the most friendly object),
+we study vector spaces.
