--- a/txt/BasicAlgebra.tex
+++ b/txt/BasicAlgebra.tex
@@ -9,3 +9,5 @@ Groups arise as first new structures,
 but it is vector spaces that the human intuition is most accustomed to.
 Hence, after studying polynomials (being the most friendly object),
 we study vector spaces.
+
+\subimport{BasicAlgebra/}{Tensors.tex}
