feat/bsc/tensor add bilinear forms

--- a/txt/BasicAlgebra/Tensors.tex
+++ b/txt/BasicAlgebra/Tensors.tex
@@ -10,3 +10,5 @@ One is to look at multilinear maps
 (that is, maps linear in each coordinate),
 and the other is to somehow put the domains together
 in a way that preserves the linearity of each domain.
+
+\subimport*{Tensors/}{BilinearMaps.tex}
