feat/bsc/tensor fix description of remark

--- a/txt/BasicAlgebra/Tensors/BilinearMaps.tex
+++ b/txt/BasicAlgebra/Tensors/BilinearMaps.tex
@@ -243,5 +243,5 @@ are these the only bilinear maps to \(k\)?
     \(\Lsp(V,W;k)\) and \(\Msp_{m,n}(k)\) are
     \emph{naturally} isomorphic vector spaces
     as if \(V\iso V^{\dast}\) for
-    a finite-dimensional vector space \(V\).
+    a finite-dimensional vector space \(V\) and its double dual.
 \end{remark}
