--- a/txt/BasicAlgebra/Tensors.tex
+++ b/txt/BasicAlgebra/Tensors.tex
@@ -12,3 +12,4 @@ and the other is to somehow put the domains together
 in a way that preserves the linearity of each domain.
 
 \subimport*{Tensors/}{BilinearMaps.tex}
+\subimport*{Tensors/}{TensorNotations.tex}
