feature/sidetext fix stated chapter name

--- a/txt/Preface.tex
+++ b/txt/Preface.tex
@@ -62,7 +62,7 @@ however, perhaps the main lines would remain quite unchanged.
     \item \textdef{Measure Theory and Calculus}
     \begin{itemize}
         \item Riemann-Stieltjes Integration
-        \item Measure Theory
+        \item Measure Theory and Lebesgue Integration
         \item Multivariable Calculus
         \item Integration of Differential Forms
     \end{itemize}
