feat/measure/lebesgue add chapter body

--- a/txt/MeasureIntegration/MeasureTheory.tex
+++ b/txt/MeasureIntegration/MeasureTheory.tex
@@ -1,2 +1,14 @@
 \setchapter{Measure Theory and Lebesgue Integration}
 \label{chap:lebesgue}
+
+Riemann's theory of integration on \(\Rmath\) is usually depicted as
+partitioning the interval and obtaining long vertical strips.
+Lebesgue's theory takes the other way round;
+loosely speaking, his theory of integration involves the process of
+making horizontal strips under the graph of the given function.
+What seems miraculous is the fact that
+a simple change of direction resolves a lot of irregularities
+which appear in Riemann's integration.
+
+But what do we actually mean by cutting the area horizontally?
+To answer the question, we need to introduce the concept of measure.
