feat/bsc/linear: add chapter

--- a/MathNotes.tex
+++ b/MathNotes.tex
@@ -1,7 +1,7 @@
 \documentclass[
     oneside
     % image
-]{styles/mori-book}% styles/mori-report in real usage
+]{mori-book}
 
 \usepackage[
     % showframe,
@@ -19,8 +19,8 @@
 \usepackage{tikz}
 \usetikzlibrary{cd, positioning}
 
-\usepackage{notation/mori-math}
-\usepackage{notation/mori-ref}
+\usepackage{mori-math}
+\usepackage{mori-ref}
 
 \input{thmstyles.tex}
 \input{notation.tex}
