--- a/txt/BasicAlgebra.tex
+++ b/txt/BasicAlgebra.tex
@@ -10,4 +10,5 @@ but it is vector spaces that the human intuition is most accustomed to.
 Hence, after studying polynomials (being the most friendly object),
 we study vector spaces.
 
+\subimport{BasicAlgebra/}{LinearAlgebra.tex}
 \subimport{BasicAlgebra/}{Tensors.tex}
