feat/bsc/linear: add section vector space

--- a/txt/BasicAlgebra/LinearAlgebra.tex
+++ b/txt/BasicAlgebra/LinearAlgebra.tex
@@ -1,2 +1,11 @@
 \setchapter{Linear Algebra}
 \label{chap:linalg}
+
+Linear algebra is the study of algebraic structures called vector spaces
+and operation-preserving functions, which are called linear maps.
+In many references,
+it is customary not to distinguish matrix operation and linear algebra.
+However, starting from concrete objects such as matrices
+will arguably supply concrete motivation behind the abstraction.
+
+\subimport{LinearAlgebra/}{VectorSpace.tex}
