feature/style: modify theorem styles

--- a/MathNotes.tex
+++ b/MathNotes.tex
@@ -16,6 +16,10 @@
 \usepackage{booktabs}
 \renewcommand{\baselinestretch}{1.15}
 
+% color theorems;
+% load before tikz to avoid option clash
+\usepackage[svgnames]{xcolor}
+
 \usepackage{tikz}
 \usetikzlibrary{cd, positioning}
 
