feature/style: modify headformat; delete period

--- a/thmstyles.tex
+++ b/thmstyles.tex
@@ -16,7 +16,7 @@
     bodyfont=\normalfont,
     notefont=\sffamily\mdseries,
     notebraces={(}{)},
-    headformat={\NAME\space\NUMBER.\NOTE},
+    headformat={\NAME\space\NUMBER\NOTE},
     headpunct={},
     preheadhook=\vspace{0.5\baselineskip},
     postfoothook=\vspace{0.5\baselineskip}
@@ -96,7 +96,7 @@
     bodyfont=\sffamily,
     notefont=\sffamily\bfseries,
     notebraces={(}{)},
-    headformat={\NAME\space\NUMBER.\NOTE},
+    headformat={\NAME\space\NUMBER\NOTE},
     headpunct={},
     preheadhook=\vspace{0.5\baselineskip},
 ]{normalthm}
