--- a/txt/BasicAlgebra/LinearAlgebra/VectorSpace.tex
+++ b/txt/BasicAlgebra/LinearAlgebra/VectorSpace.tex
@@ -1,6 +1,18 @@
 \setsection{Vector Spaces}
 \label{sec:vectorspace}
 
+We have seen from the previous chapter that
+matrices provide a way to express systems of linear equations.
+In the process, we considered tuples
+--- or \emph{vectors} ---
+of unknowns, arguably in either \(\Rmath^n\) or \(\Cmath^n\).
+Our goal is to give an appropriate abstraction of such spaces,
+and analyze the key properties of them.
+
+\subsection[Definition and Examples]%
+    {Definition and Examples of Vector Spaces}
+\label{sbc:vspdef}
+
 Recall that our first usage of matrices
 were to represent systems of linear equations.
 There, numbers with a single index were written as vectors,
@@ -8,7 +20,7 @@ whereas numbers with double indices were written in a matrix.
 Our first objective here
 is to give an appropriate abstraction of such numbers.
 
-\begin{example}[\(\Rmath^n\) and \(\Cmath^n\)]
+\begin{example}
     \label{exm:vspintro}
     Note that we in fact have very limited examples of vectors:
     \(\Rmath^n\) and \(\Cmath^n\).
@@ -114,7 +126,8 @@ This results in the following definition.
         \item For any \(v\in V\), \(1v=v\);
     \end{axioms}
     then \(V\) is called
-    a \define[space!vector space]{vector space over \(F\)},
+    a \define[space!vector space]{vector space over \(F\)}
+    or an \textdef{\(F\)-vector space},
     and the elements of \(V\) are called
     \define[vector]{vectors}.
 \end{definition}
@@ -123,11 +136,134 @@ Having our definition of vector spaces,
 it is important to check if
 our motivating examples in \cref{exm:vspintro} fit in the above.
 
-\begin{example}[\(\Rmath^n\) and \(\Cmath^n\)]
+\begin{example}[Revisited: \(\Rmath^n\) and \(\Cmath^n\)]
     \label{exm:vsintroverif}
     Here we verify that
     \(\Rmath^n\) and \(\Cmath^n\) satisfy the given axioms above.
     The proof is not long,
     since all the above axioms hold for \(\Rmath\) and \(\Cmath\).
     For \(n>1\), we can repeat the same argument component-wise.
+\end{example}
+
+Since we are considering general fields \(F\)
+instead of \(\Rmath\) and \(\Cmath\),
+we can define a vector space structure on the product \(F^n\).
+
+\begin{definition}[Tuples as Vectors]
+    \label{def:Fn}
+    The set \(F^n=\set{a=(a^1,\dots,a^n)}{a^i\in F}\)
+    of \(n\)-tuples of elements of \(F\)
+    forms a vector space under component-wise operations;
+    that is,
+    \begin{align*}
+        (a^1,\dots,a^n)+(b^1,\dots,b^n)
+        &=(a^1+b^1,\dots,a^n+b^n) \\
+        c(a^1,\dots,a^n)
+        &=(ca^1,\dots,ca^n).
+        \qquad\ (c\in F)
+    \end{align*}
+\end{definition}
+
+Of course, there are more examples of vector spaces.
+Most of the following examples consist of function spaces,
+since those were the most required examples throughout history.
+
+\begin{example}[Polynomials]
+    \label{exm:vsppoly}
+    Recall that polynomials of \(t\) over a field \(F\)
+    are formal symbols of the form \(a_0+a_1t+\cdots+a_nt^n\).
+    Denote the set of all such polynomials by \(\denote{\poly{F}}\).
+    Then \(\poly{F}\) is a vector space over the field \(F\)
+    under the usual operations.
+
+    Moreover, let \(\denote{\finitepoly{n}{F}}\)
+    denote the set of all polynomials of \(t\) over \(F\)
+    of degree no greater than \(n\).
+    Then \(\finitepoly{n}{F}\) also forms a vector space over \(F\).
+\end{example}
+
+Note that
+\(\finitepoly{n}{F}\) can be manipulated just as \(\Rmath^{n+1}\)
+if we consider polynomials \(a_0+a_1t+\cdots+a_nt^n\)
+as \((n+1)\)-tuples \((a_0,\dots,a_n)\).
+Viewing them as sequences \(\zseq{a_i}{i}\)
+which terminate at most \(i=n\),
+we can further extend this idea
+and consider polynomials in \(\poly{F}\)
+as finitely terminating sequences on \(F\).
+
+\begin{example}[Function Spaces]
+    \label{exm:vspfunc}
+    Given nonempty sets \(X\) and \(Y\),
+    we denote the set of all functions from \(X\) to \(Y\) by
+    \(\denote{\func{X,Y}}\).
+    If \(X\) and \(Y\) are mere sets,
+    then there is little to say in the perspective of linear algebra.
+
+    Things get more interesting if
+    we let \(Y\) to be a vector space \(V\) over \(F\).
+    Then, \(\func{X,V}\) is a vector space under point-wise operations:
+    \[
+        (f+g)(x)=f(x)+g(x),
+        \qquad
+        (cf)(x)=cf(x),
+        \qquad
+        (c\in F, x\in X)
+    \]
+    Of course, spaces of ``\(C^k\)-functions'' in analysis
+    --- although we have not defined them yet ---
+    are also vector spaces under point-wise operations.
+\end{example}
+
+Just a quick note;
+the codomain \(Y\) in the notation \(\func{X,Y}\) can be omitted
+if it is clear from the context.
+Other several remarks can be made about \cref{exm:vspfunc}.
+
+\begin{remark}[The Structure of the Codomain]
+    \label{rmk:funcsp1}
+    Consider a function \(f:X\to Y\).
+    Originally, \(f\) is merely an assignment from \(X\) to \(Y\),
+    and there is not much we can assert about \(f\).
+    It is the fact that the codomain \(V\) is a vector space
+    which makes \(\func{X,V}\) a vector space in the usual sense.
+    This is a common strategy in studying functions:
+    endowing the structure of the codomain to function spaces.
+\end{remark}
+\begin{remark}[Functions as Vectors]
+    \label{rmk:funcsp2}
+    Consider the \(n\)-tuple \(a=(2,4,\dots,2n)\) in \(\Rmath^n\).
+    Then it is both natural to
+    refer to the \(i\)-th component \(a^i\) of \(a\),
+    and to see \(a\) as a function \(a:\{1,\dots,n\}\to\Rmath\)
+    defined by \(i\mapsto a^i=2i\).
+    Thus, we can call \(a(i)\) the \(i\)-th component of \(a\).
+
+    Similarly, consider the sequence \(a:\Nmath\to\Rmath\)
+    defined by \(i\mapsto 2i\).
+    Extending the idea given above,
+    it makes sense to call \(a(i)\) the \(i\)-th component of \(a\).
+    Indeed, if we were to use infinite tuples,
+    then the sequence \(a\) would be represented as \((2,4,6,\dots)\).
+
+    The leap of faith is that
+    given any function \(f:X\to Y\),
+    we can call the image \(f(x)\) of \(x\in X\)
+    the ``\(x\)-th component'' of \(f\).
+    In this point of view,
+    the point-wise operations in \(\func{X,V}\) makes sense;
+    it is exactly what we have done in \(F^n\).
+\end{remark}
+
+\begin{example}[Matrices as Vectors]
+    \label{exm:vspmat}
+    In the previous chapter,
+    matrices played the role of transforming vectors.
+    However, it is also possible to view matrices themselves as vectors.
+
+    Denote the set of all \mats{m}{n} with components in \(F\)
+    by \(\denote{\Msp_{m,n}(F)}\).
+    Then it is clearly a vector space under the usual operations.
+    Note that we do not consider multiplications of matrices here;
+    it is not in the definition of vector spaces.
 \end{example}
